pex-sql/pex-sql-core/src/main/resources/grammar/ddl.ebnf
grammar sql-ddl;

// DDL (Data Definition Language) grammar
// Covers CREATE, ALTER, DROP statements

ddl-statement ::= create-statement | alter-statement | drop-statement ;

// CREATE
create-statement ::= create-table
                   | create-index
                   | create-view
                   | create-trigger
                   | create-procedure ;

// Temporary table variants: TEMP, TEMPORARY (PostgreSQL/MySQL), GLOBAL TEMPORARY (Oracle GTT)
create-table ::= 'CREATE' ('GLOBAL' 'TEMPORARY' | 'TEMPORARY' | 'TEMP')? 'TABLE'
                 ('IF' 'NOT' 'EXISTS')? table-name
                 '(' table-element-list ')'
                 ('ON' 'COMMIT' ('DELETE' | 'PRESERVE') 'ROWS')? ;

table-element-list ::= table-element (',' table-element)* ;
table-element ::= column-def | table-constraint ;

column-def ::= column-name data-type column-constraint* ;

column-constraint ::= 'NOT' 'NULL'
                     | 'NULL'
                     | 'DEFAULT' literal-value
                     | 'AUTO_INCREMENT'
                     | 'SERIAL'
                     | 'PRIMARY' 'KEY'
                     | 'UNIQUE'
                     | 'REFERENCES' table-name ('(' column-list ')')? ;

table-constraint ::= ('CONSTRAINT' constraint-name)?
                     (primary-key-constraint
                     | foreign-key-constraint
                     | unique-constraint
                     | check-constraint) ;

primary-key-constraint ::= 'PRIMARY' 'KEY' '(' column-list ')' ;

foreign-key-constraint ::= 'FOREIGN' 'KEY' '(' column-list ')'
                           'REFERENCES' table-name '(' column-list ')'
                           ('ON' ('DELETE' | 'UPDATE') referential-action)* ;

referential-action ::= 'CASCADE' | 'SET' 'NULL' | 'RESTRICT' | 'NO' 'ACTION' ;

unique-constraint ::= 'UNIQUE' '(' column-list ')' ;

check-constraint ::= 'CHECK' '(' expression ')' ;

// CREATE INDEX
create-index ::= 'CREATE' 'UNIQUE'? 'INDEX' index-name
                 'ON' table-name '(' column-list ')' ;

// CREATE VIEW
create-view ::= 'CREATE' ('OR' 'REPLACE')? 'VIEW' view-name
                'AS' select-statement ;

// CREATE TRIGGER
create-trigger ::= 'CREATE' 'TRIGGER' trigger-name
                   trigger-timing trigger-event
                   'ON' table-name
                   ('BEGIN' statement-list 'END')? ;

trigger-timing ::= 'BEFORE' | 'AFTER' ;
trigger-event ::= 'INSERT' | 'UPDATE' | 'DELETE' ;

// CREATE PROCEDURE
create-procedure ::= 'CREATE' ('OR' 'REPLACE')? 'PROCEDURE' proc-name
                     '(' param-list? ')'
                     ('BEGIN' statement-list 'END')? ;

param-list ::= procedure-param (',' procedure-param)* ;
procedure-param ::= param-mode? param-name data-type ;
param-mode ::= 'IN' | 'OUT' | 'INOUT' | 'IN' 'OUT' ;

// ALTER TABLE
alter-statement ::= 'ALTER' 'TABLE' table-name alter-action-list ;
alter-action-list ::= alter-action (',' alter-action)* ;
alter-action ::= add-column | drop-column | rename-column | add-constraint ;

add-column ::= 'ADD' 'COLUMN'? column-def ;
drop-column ::= 'DROP' 'COLUMN'? column-name ;
rename-column ::= 'RENAME' 'COLUMN'? column-name 'TO' column-name ;
add-constraint ::= 'ADD' table-constraint ;

// DROP
drop-statement ::= 'DROP' 'TABLE' ('IF' 'EXISTS')? table-name ;

// Data types
data-type ::= 'INT' | 'INTEGER' | 'BIGINT'
            | 'FLOAT' | 'REAL' | 'DOUBLE'
            | 'DECIMAL' ('(' number (',' number)? ')')? | 'NUMERIC'
            | 'VARCHAR' ('(' number ')')? | 'CHAR' | 'TEXT'
            | 'BOOLEAN' | 'BOOL'
            | 'DATE' | 'TIMESTAMP' | 'DATETIME'
            | 'BLOB' | 'BYTEA'
            | 'SERIAL' ;

// Common productions
column-list ::= column-name (',' column-name)* ;
statement-list ::= statement+ ;
table-name ::= identifier ;
column-name ::= identifier ;
index-name ::= identifier ;
view-name ::= identifier ;
trigger-name ::= identifier ;
proc-name ::= identifier ;
constraint-name ::= identifier ;
param-name ::= identifier ;
number ::= /[0-9]+/ ;
string-literal ::= /'[^']*'/ ;
identifier ::= /[a-zA-Z_][a-zA-Z0-9_]*/ ;
literal-value ::= number | string-literal | 'NULL' | 'TRUE' | 'FALSE' ;
expression ::= expression-term (expression-op expression-term)* ;
expression-term ::= literal-value | column-name | function-call | '(' expression ')' | 'NOT' expression-term ;
expression-op ::= '+' | '-' | '*' | '/' | '=' | '<' | '>' | '<=' | '>=' | '<>' | '!=' | 'AND' | 'OR' | 'LIKE' | 'IS' | 'IN' ;
function-call ::= identifier '(' (expression (',' expression)* | '*')? ')' ;
statement ::= ddl-statement | dml-keyword identifier (identifier | literal-value | '(' | ')' | ',' | '.')* ;
dml-keyword ::= 'SELECT' | 'INSERT' | 'UPDATE' | 'DELETE' | 'SET' ;
select-statement ::= 'SELECT' select-list ('FROM' identifier (',' identifier)*)? ('WHERE' expression)? ;
select-list ::= select-item (',' select-item)* ;
select-item ::= '*' | expression ('AS' identifier)? ;
